--- a/Laminal/Client/Pages/TaskList.razor
+++ b/Laminal/Client/Pages/TaskList.razor
@@ -5,7 +5,7 @@
 @inject HttpClient httpClient
 @inject ITaskService Tasks
 
-<MudContainer MaxWidth="MaxWidth.Large">
+@*<MudContainer MaxWidth="MaxWidth.Large">*@
     <h3>TaskList</h3>
 
     <table class="table">
@@ -55,7 +55,7 @@
             <MudDataGridPager T="Task" />
         </PagerContent>
     </MudDataGrid>*@
-</MudContainer>
+@*</MudContainer>*@
 
 @code {
     IEnumerable<Task> tasks;
@@ -63,7 +63,7 @@
     {
         Console.WriteLine("Hello");
         // todo
-        tasks = await Tasks.GetTasks(0);
+        tasks = await Tasks.GetTasks(0, new CancellationToken());
         //var tasks = await httpClient.GetFromJsonAsync<List<Task>>("Tasks/GetTasks");
         //Elements = new ObservableCollection<Task>(tasks);
     }
